--- a/gh-pages.yml
+++ b/gh-pages.yml
@@ -7,7 +7,7 @@ on:
 
 permissions:
   contents: write
-  
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -27,7 +27,7 @@ jobs:
         run: npm ci
 
       - name: Linting
-        run: npm run lint
+        run: npm run stylelint
 
       - name: Building
         run: npm run build
